# xiaozhi-esp32-server-y

./: .gitignore  Dockerfile  Dockerfile-pip  config.yaml  pyproject.toml  requirements.txt
config/: private_config.py
core/: connection.py
core/handle/: musicHandler.py
core/utils/: asr.py  embedding.py  llm_memory.py
docs/: Deployment-silm.md  Deployment.md  Embe.md
main/xiaozhi-server/core/: connection.py
main/xiaozhi-server/core/handle/: receiveAudioHandle.py  reminderHandle.py  textHandle.py
manager/: http_server.py
web/: .env.example  .gitignore  LICENSE.md  README.md  app.py  index.html  package-lock.json  package.json  pyproject.toml
web/api/: app.py
web/api/admin/: admin.py
web/api/auth/: auth.py  dependencies.py  models.py  security.py
web/api/db/: database.py  models.py
web/src/: app.tsx  config-global.ts  main.tsx
web/src/components/chart/: chart-legends.tsx  use-chart.ts
web/src/layouts/: config-nav-dashboard.tsx
web/src/layouts/dashboard/: nav.tsx
web/src/routes/: sections.tsx
web/src/sections/auth/: AuthContext.tsx  index.ts  register.tsx  sign-in-view.tsx
web/src/sections/blog/view/: blog-view.tsx
web/src/sections/overview/view/: overview-analytics-view.tsx
web/src/sections/product/view/: products-view.tsx
web/src/sections/user/: user-table-row.tsx  utils.ts
web/src/sections/user/view/: user-view.tsx
web/src/theme/: create-theme.ts
web/vue/: README.md
web/vue/src/views/: home.vue  login.vue  welcome.vue
